--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "requests==2.32.3",
     "python-dotenv==1.0.1",
     "pymupdf>=1.25.3",
+    "weaviate-client==4.10.4"
 ]
 
 [project.scripts]
